NAS-00000: Fix Usage card horizontal alignment
(cherry picked from commit dc624c3f1e58c775546969184d2c180668b5dd42)

--- a/src/app/pages/storage/components/dashboard-pool/pool-usage-card/pool-usage-card.component.scss
+++ b/src/app/pages/storage/components/dashboard-pool/pool-usage-card/pool-usage-card.component.scss
@@ -45,7 +45,7 @@
 
   .left {
     align-items: center;
-    flex: 1 1 40%;
+    flex: 0 0 auto;
     flex-direction: column;
 
     > div {
@@ -55,7 +55,7 @@
 
   .right {
     display: flex;
-    flex: 1 1 60%;
+    flex: 1 1 auto;
     flex-direction: column;
   }
 }
